# MatrixTest

./: CMakeLists.txt
lib/c/: c_api.cpp  c_api.h
src/: main.cpp
